--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 
             <div class="row">
 
-                <div class="info">
+                <div class="info js-scroll fade-in-bottom">
                     <h2><i class="fas fa-book-open"></i> Informations </h2>
                     <h3> <span> Birthday : </span> January 13, 2001 </h3>
                     <h3> <span> Nationality : </span> French </h3>
@@ -87,10 +87,9 @@
                     <h3> <span> Languages : </span> French (Native), English (B2 Intermediate), Spanish (A2 beginner)</h3>
                     <h3> <span> Mail : </span> churlet.sylvain@gmail.com </h3>
                     <h3> <span> Phone number : </span> +33 (0)7 83 25 60 72 </h3>
-
                 </div>
 
-                <div class="interest">
+                <div class="interest js-scroll fade-in-bottom">
 
                     <h2><i class="fas fa-running"></i> Interests </h2>
                     <h3> <span> Sports : </span> Rink Hockey (15 yeas), badminton (University sport)</h3>
@@ -110,7 +109,7 @@
             <h1 class="heading">My <span>skills</span></h1>
 
             <div class="skillsBoxes">
-                <div class='skillBox'>
+                <div class='skillBox js-scroll slide-left'>
                     <p class='title'>Databases</p>
                     <div class='infos'>
                         <div class="infobox">
@@ -138,7 +137,7 @@
                         </div>
                     </div>
                 </div>
-                <div class='skillBox'>
+                <div class='skillBox js-scroll slide-left'>
                     <p class='title'>Web</p>
                     <div class='infos'>
                         <div class="infobox">
@@ -164,7 +163,7 @@
                         </div>
                     </div>
                 </div>
-                <div class='skillBox'>
+                <div class='skillBox js-scroll slide-left'>
                     <p class='title'>Other</p>
                     <div class='infos'>
                         <div class="infobox">
@@ -201,10 +200,10 @@
 
             <h1 class="heading">My <span>Education</span> & <span>Experiences</span></h1>
 
-            <h2 id="educationTitle">Education </h2>
+            <h2 class="js-scroll slide-right" id="educationTitle">Education </h2>
             <div class="box-container">
 
-                <div class="box">
+                <div class="box js-scroll slide-right">
                     <i class="fas fa-graduation-cap"></i>
                     <span>2022</span>
                     <h3>DUT informatique</h3>
@@ -213,8 +212,7 @@
                     </p>
                 </div>
 
-
-                <div class="box ">
+                <div class="box js-scroll slide-right">
                     <i class="fas fa-graduation-cap"></i>
                     <span>2020</span>
                     <h3>French Baccalaureate STI SIN </h3>
@@ -222,15 +220,13 @@
                         (High School diploma specialized in IT) with high honors <br> Louis Armand High School – Chambéry, France.
                     </p>
                 </div>
-
-
             </div>
 
 
-            <h2>Experiences</h2>
+            <h2 class="js-scroll slide-right">Experiences</h2>
             <div class="box-container">
 
-                <div class="box">
+                <div class="box js-scroll slide-right">
                     <i class="fas fa-briefcase"></i>
                     <span>May 2021 to today</span>
                     <h3>TacticallJoob | University mental project (5 employees) Genève, Swiss</h3>
@@ -241,7 +237,7 @@
                     </p>
                 </div>
 
-                <div class="box">
+                <div class="box js-scroll slide-right">
                     <i class="fas fa-briefcase"></i>
                     <span>June to July 2021</span>
                     <h3>Busar | Les papillons blancs (1000 employees) Aix-les-Bains, France </h3>
@@ -250,7 +246,7 @@
                     </p>
                 </div>
 
-                <div class="box">
+                <div class="box js-scroll slide-right">
                     <i class="fas fa-briefcase"></i>
                     <span>September 2019 to April 2020</span>
                     <h3>Civic service | HCC | Sport association Hockey Club Chambery, France</h3>
@@ -267,7 +263,7 @@
 
             <div class="box-container">
 
-                <div class="box" id="box1">
+                <div class="box js-scroll fade-in-bottom" id="box1">
                     <a href="https://github.com/Sylvain-Chu/mythologie-grecque" target="_blank">
                         <h2 id="title1">Greek mythology</h2>
                         <p id="description1">
@@ -277,7 +273,7 @@
                     </a>
                 </div>
 
-                <div class="box" id="box2">
+                <div class="box js-scroll fade-in-bottom" id="box2">
                     <a href="https://github.com/Batgame/Firewall-Defense" target="_blank">
                         <h2 id="title2">Firewall-Defense</h2>
                         <p id="description2">
@@ -287,7 +283,7 @@
                     </a>
                 </div>
 
-                <div class="box" id="box3">
+                <div class="box js-scroll fade-in-bottom" id="box3">
                     <a href="https://github.com/tmillot74/jeu-unity" target="_blank">
                         <h2 id="title3">Turbo Kart Racer</h2>
                         <p id="description3">
@@ -297,7 +293,7 @@
                     </a>
                 </div>
 
-                <div class="box" id="box4">
+                <div class="box js-scroll fade-in-bottom" id="box4">
                     <a href="https://github.com/Sylvain-Chu/tacticaljob" target="_blank">
                         <h2 id="title4">TactiCallJob</h2>
                         <p id="description4">
