--- a/index.html
+++ b/index.html
@@ -316,9 +316,11 @@
 
                 <div class="content">
 
-                    <h3 class="title">Contact info</h3>
 
-                    <div class="info">
+                    <div class="info js-scroll fade-in-bottom">
+
+                        <h3 class="title">Contact info</h3>
+
                         <h3> <i class="fas fa-envelope"></i> churlet.sylvain@gmail.com </h3>
                         <h3> <i class="fas fa-phone"></i> +33 (0)7 83 25 60 72 </h3>
                         <h3> <i class="fas fa-map-marker-alt"></i> 3 All. Louis de Broglie, Annecy, France </h3>
@@ -329,7 +331,7 @@
 
                 </div>
 
-                <div class="content">
+                <div class="content js-scroll fade-in-bottom">
 
                     <h3 class="title">References</h3>
 
