--- a/index.html
+++ b/index.html
@@ -229,9 +229,9 @@
                 <div class="box js-scroll slide-right">
                     <i class="fas fa-briefcase"></i>
                     <span>May 2021 to today</span>
-                    <h3>TacticallJoob | University mental project (5 employees) Genève, Swiss</h3>
+                    <h3>TacticallJoob | University mentored project (5 employees) Genève, Swiss</h3>
                     <p>
-                        As part of a mental project, we created the TacticallJob website in groups of 5. The purpose of this website is to connect companies and job seekers in order to facilitate recruitment. As part of a project with 5 of my collegue, I created TacticallJob,
+                        As part of a mentored project, we created the TacticallJob website in groups of 5. The purpose of this website is to connect companies and job seekers in order to facilitate recruitment. As part of a project with 5 of my collegue, I created TacticallJob,
                         a website. The purpose is to connect companies and job seekers in order to facilitate recruitment.
                         <br> <em> Using the laravel framework.</em>
                     </p>
@@ -316,16 +316,14 @@
 
                 <div class="content">
 
+                    <h3 class="title">Contact info</h3>
 
                     <div class="info js-scroll fade-in-bottom">
-
-                        <h3 class="title">Contact info</h3>
 
                         <h3> <i class="fas fa-envelope"></i> churlet.sylvain@gmail.com </h3>
                         <h3> <i class="fas fa-phone"></i> +33 (0)7 83 25 60 72 </h3>
                         <h3> <i class="fas fa-map-marker-alt"></i> 3 All. Louis de Broglie, Annecy, France </h3>
-                        <h3><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain
-                                Churlet</a></h3>
+                        <h3><i class="fab fa-linkedin-in"></i> <a href="https://www.linkedin.com/in/sylvain-churlet-8629691bb/" target="_blank">Sylvain Churlet</a></h3>
                         <h3> <i class="fab fa-instagram"></i><a href="https://www.instagram.com/sylvain_chu/" target="_blank">sylvain_chu</a></h3>
                     </div>
 
@@ -361,6 +359,9 @@
 
         </section>
 
+        <footer>
+            <p>&copy; Sylvain Churlet - 2021</p>
+        </footer>
 
         <div class="top">
             <i class="fas fa-arrow-up"></i>
@@ -370,7 +371,6 @@
 
     <!-- js -->
     <script src="src/js/main.js"></script>
-
 
 </body>
 
